--- a/index.html
+++ b/index.html
@@ -4,119 +4,137 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link href="stylegrid.css" rel="stylesheet" />
     <title>Bejan Afshar</title>
   </head>
   <body>
-    <header>
-      <h1>Bejan Afshar</h1>
-      <nav id="nav">
-        <a href="#contact">contact</a>
-        <a href="#bio">bio</a>
-      </nav>
-    </header>
 
-    <main>
-      <section class="container">
-        <article class="items">
-          <figure>
-            <img src="bejan.jpg" alt="profile picture of bejan" height="200" />
-            <figcaption>That's me, Bejan</figcaption>
-          </figure>
-        </article>
+    <div class="all">
 
-        <article class="items">
-          <h2>Tags with interests</h2>
-          <ul>
-            <li>Coden</li>
-            <li>lesen</li>
-            <li>Spazieren</li>
-            <li>Analysen</li>
-            <li>Finanzen</li>
-          </ul>
-        </article>
+      <div class="box header">
+        <header>
+          <h1>Bejan Afshar</h1>
+          <nav id="nav">
+            <a href="#contact">contact</a>
+            <a href="#bio">bio</a>
+          </nav>
+        </header>
+      </div>
 
-        <article class="items">
-          <h2>Tags with Skills</h2>
-          <ul>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-          </ul>
-        </article>
+        <div class="box main">
+          <main>
+            <section class="container">
+              <article class="items">
+                <figure>
+                  <img
+                    src="bejan.jpg"
+                    alt="profile picture of bejan"
+                    height="200"
+                  />
+                  <figcaption>That's me, Bejan</figcaption>
+                </figure>
+              </article>
 
-        <article class="items">
-          <h2 id="contact">Contact Information</h2>
-          <ul>
-            <li>Schmidt-Rottluff-Weg</li>
-            <li>22767</li>
-            <li>Hamburg</li>
-            <li><a href="cosmopolit_b@hotmail.de">Mail an Bejan</a></li>
-          </ul>
-        </article>
+              <article class="items">
+                <h2>Tags with interests</h2>
+                <ul>
+                  <li>Coden</li>
+                  <li>lesen</li>
+                  <li>Spazieren</li>
+                  <li>Analysen</li>
+                  <li>Finanzen</li>
+                </ul>
+              </article>
 
-        <article class="items">
-          <h2>Profiles</h2>
-          <article class="profile-links">
-            <a href="https://github.com/bejanaf"
-              ><img src="git1.png" alt="git logo" width="50"
-            /></a>
+              <article class="items">
+                <h2>Tags with Skills</h2>
+                <ul>
+                  <li>Unix</li>
+                  <li>Git</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Javascript</li>
+                </ul>
+              </article>
 
-            <a href="https://codepen.io/bejan"
-              ><img src="codepen1.png" alt="codepen logo" width="50"
-            /></a>
+              <article class="items">
+                <h2 id="contact">Contact Information</h2>
+                <ul>
+                  <li>Schmidt-Rottluff-Weg</li>
+                  <li>22767</li>
+                  <li>Hamburg</li>
+                  <li><a href="cosmopolit_b@hotmail.de">Mail an Bejan</a></li>
+                </ul>
+              </article>
 
-            <a href="https://de.linkedin.com"
-              ><img src="linkedin.png" alt="linkedin logo" width="50"
-            /></a>
-          </article>
-        </article>
+              <article class="items">
+                <h2>Profiles</h2>
+                <article class="profile-links">
+                  <a href="https://github.com/bejanaf"
+                    ><img src="git1.png" alt="git logo" width="50"
+                  /></a>
 
-        <article class="items">
-          <h2 id="bio">Biography</h2>
-          <p>Hier steht meine ganze Lebensgeschichte....</p>
-        </article>
-      </section>
+                  <a href="https://codepen.io/bejan"
+                    ><img src="codepen1.png" alt="codepen logo" width="50"
+                  /></a>
 
-      <section class="table1">
-        <h2>CV</h2>
-        <table border="0" class="table">
-          <thead>
-            <tr>
-              <th>Von-bis</th>
-              <th>Was</th>
-              <th>Wo</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>seit April 2021</td>
-              <td>Trainee WebDev</td>
-              <td>neuefische GmbH</td>
-            </tr>
-            <tr>
-              <td>2009 - 2020</td>
-              <td>Medientechniker</td>
-              <td>Hochschule für angewandte Wissenschaften</td>
-            </tr>
-            <tr>
-              <td>2007 - 2009</td>
-              <td>Technischer Assistent für Informatik</td>
-              <td>Gewerbeschule G10</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-    </main>
+                  <a href="https://de.linkedin.com"
+                    ><img src="linkedin.png" alt="linkedin logo" width="50"
+                  /></a>
+                </article>
+              </article>
 
-    <footer>
-      <section>
-        <a href="">Platzhalter</a>
-        <a href="">Impressum</a>
-      </section>
-    </footer>
+              <article class="items">
+                <h2 id="bio">Biography</h2>
+                <p>Hier steht meine ganze Lebensgeschichte....</p>
+              </article>
+            </section>
+          </main>
+        </div>
+
+        <div class="box table"
+          <section class="table1">
+            <h2>CV</h2>
+            <table border="0" class="table">
+              <thead>
+                <tr>
+                  <th>Von-bis</th>
+                  <th>Was</th>
+                  <th>Wo</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>seit April 2021</td>
+                  <td>Trainee WebDev</td>
+                  <td>neuefische GmbH</td>
+                </tr>
+                <tr>
+                  <td>2009 - 2020</td>
+                  <td>Medientechniker</td>
+                  <td>Hochschule für Angewandte Wissenschaften</td>
+                </tr>
+                <tr>
+                  <td>2007 - 2009</td>
+                  <td>schulische Ausbildung</td>
+                  <td>Gewerbeschule G10</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+          </div>
+        
+
+          <div class="footer">
+            <footer>
+              <section>
+                <a href="contact.html">Contact Me</a>
+                <a href="">Impressum</a>
+              </section>
+            </footer>
+          </div>
+          
+      </div>
   </body>
 
   <!--- 
